--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Creación archivos HTML y CSS
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SEGA Navbar</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="sega-logo.png" alt="SEGA Logo">
+        </div>
+        <ul class="opciones">
+            <li><a href="#">MUNDOS</a></li>
+            <li><a href="#">JUEGOS</a></li>
+            <li><a href="#">VER</a></li>
+            <li><a href="#">TIENDA</a></li>
+            <li><a href="#">NOTICIAS</a></li>
+            <li><a href="#">OFERTAS</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
