--- a/login/login.html
+++ b/login/login.html
@@ -11,7 +11,7 @@
         <form action="#">
             <h2>👻 GAYMERS 👻</h2>
             <div class="input-field">
-                <input type="text" placeholder="Email" required>
+                <input type="email" placeholder="Email" required>
             </div>
             <div class="input-field">
                 <input type="password" placeholder="Contraseña" required>
@@ -26,7 +26,7 @@
             <button type="submit">Log In</button>
             <div class="register">
                 <span class="text">No tienes una cuenta?</span>
-                <a href="#">Registrate</a>
+                <a href="../signup/signup.html">Registrate</a>
             </div>
         </form>
 
